--- a/index.html
+++ b/index.html
@@ -167,38 +167,39 @@
 <!-- ACA EMPIEZA SECTION CUATRO -->
 <section class="servicio">
 <h1>Servicio</h1>
-<div>
-<div>
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
-        <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z"/>
-      </svg>
+<div class="todos">
+<div class="pepe separador">
+    <div class="imagen">
+    <img src="img/icons8-ordenador-portátil-64.png" alt="" class="prl">
+</div>
       <h3>Creador de PaginasWeb</h3>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio eius dicta ad distinctio cumque labore unde culpa, voluptatum fugit eos suscipit sunt ipsum. Iste officiis in rem, deleniti quis suscipit?
+       <p>Desarrollo de sitios web profesionales, sistemas web, blogs y tiendas online.</p> 
 </div>
 
-<div>
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
-        <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
-        <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-      </svg>
+<div class="pepe separador">
+    <div class="imagen">
+    <img src="img/phone.svg" alt="" class="prl">
+</div>
       <h3>Sitios Responsivos</h3>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio eius dicta ad distinctio cumque labore unde culpa, voluptatum fugit eos suscipit sunt ipsum. Iste officiis in rem, deleniti quis suscipit?
+       <p >Creacion de un sitio web responsive para la mejor visualizacion en todas las resoluciones.</p> 
 </div>
 
 
-<div>
-    <img src="img/icons8-regla-64.png" alt="">
+<div class="pepe separador">
+    <div class="imagen">
+    <img src="img/icons8-regla-64.png" alt="" class="prl">
+</div>
       <h3>Creador de PaginasWeb</h3>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio eius dicta ad distinctio cumque labore unde culpa, voluptatum fugit eos suscipit sunt ipsum. Iste officiis in rem, deleniti quis suscipit?
+       <p>Diseñe layouts que se ajusten a su negocio de manera profesional y fien en desarrollo.</p> 
 </div>
 
 
-<div>
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-megaphone" viewBox="0 0 16 16">
-        <path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49a68.14 68.14 0 0 0-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 74.663 74.663 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199V2.5zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0zm-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233c.18.01.359.022.537.036 2.568.189 5.093.744 7.463 1.993V3.85zm-9 6.215v-4.13a95.09 95.09 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A60.49 60.49 0 0 1 4 10.065zm-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68.019 68.019 0 0 0-1.722-.082z"/>
-      </svg>
-      <h3>Codigo Semantico</h3>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio eius dicta ad distinctio cumque labore unde culpa, voluptatum fugit eos suscipit sunt ipsum. Iste officiis in rem, deleniti quis suscipit?
+<div class="pepe">
+    <div class="imagen">
+    <img src="img/megaphone.svg" alt="" class="prl">
+</div>
+      <h3>Creador de PaginasWeb</h3>
+       <p>Desarrollo de sitios web profesionales, sistemas web, blogs y tiendas online</p> 
 </div>
 
 
