--- a/index.html
+++ b/index.html
@@ -13,25 +13,51 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
+        <div class="menucomun">
         <h2>Portfolio</h2>
+        <div class="xdlol">
         <nav>
-        <a href="#">Sobre mi</a>
-        <a href="#">Proyectos</a>
-        <a href="#">Servicio</a>
-        <a href="#">Habilidades</a>
+        <a class="madre pipi" href="#">Sobre mi</a>
+        <a class="madre" href="#">Proyectos</a>
+        <a class="madre" href="#">Servicio</a>
+        <a class="madre" href="#">Habilidades</a>
+        <a class="madre" href="#">Contacto</a>
     </nav>
+</div>
+</div>
+<div class="menuresponsive">
+    <nav class="navbar">
+        <h1>
+            Portfolio
+        </h1>
+
+        <input class="checkbox" type="checkbox">
+        <img class="icons hambur" src="img/menu-hamburguesa (2).png" alt="">
+        <img class="icons cruz" src="img/cruz (1).png" alt="">
+        <ul class="menu">
+            <li><a href="#">Sobre mi</a></li>
+            <li><a href="#">Proyecto</a></li>
+            <li><a href="#">Servicio</a></li>
+            <li><a href="#">Habilidades</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </nav>
+</div>
+</div>
+<img class="noche" src="img/Recurso 3@7x.png" alt="">
     </header>
 <!-- TERMINA HEADER -->
 <main>
-<section class="hero">
+<section id="uno" class="hero">
     <div class="flexuno">
     <div class="primero">
 <p class="hola">Hola, soy</p>
 <h1 class="nombre"> Ulises Fossati</h1>
-<h3>Front-End Developer and UI/UX Designer</h3>
+<h3> Desattollador de Front-End y Diseñador de UI/UX</h3>
 <div class="wspp">
 <a href="#"> <img src="img/icons8-whatsapp (1).svg" alt=""> <p>WhatsApp</p></a>
 </div>
@@ -49,10 +75,10 @@
 <img class="yo" src="img/Ulises fossati 2_Mesa de trabajo 1-02.png" alt="">
 <div class="contenedorabot">
 <h1>Sobre mi</h1>
-<P class="minmbr">Mi nombre es Ulises Fossati, tengo 18 años, vivo en Bahia Blanca. Estoy estudiando en una universidad. Pero tambien estudio mucho por mi cuenta para poder tener mejores habilidades y ver nuevas tecnologias. </P>
-<p class="haciendo">Estoy haciendo una diplomatura en programacion web en la UTN. Tambien le dedico 4hrs diarias para poder ir mejorando mis tecnicas y habilidades. estoy muy entusiasmado, ya que es algo que me gusta mucho y le pongo mucha dedicacion para poder ir progresando.</p>
+<P class="minmbr">Mi nombre es Ulises Fossati, tengo 18 años, vivo en la ciudad de Bahia Blanca, provincia de Buenos Aires. Estoy estudiando en una universidad, pero, también estudio mucho por mi cuenta para poder tener mejores habilidades y ver nuevas tecnologías. </P>
+<p class="haciendo">Estoy haciendo la Diplomatura en Programación web en la Universidad Tecnológica Nacional. Le dedico varias horas diarias para poder ir mejorando mis técnicas y habilidades. Estoy muy entusiasmado, ya que es algo que me gusta y le pongo mucha dedicación para poder ir progresando.</p>
 <section class="linked">
-    <div>
+    <div> 
 <a href="#" class="in sepa"> <img class="btnn" src="img/icons8-linkedin-foto.svg" alt=""><h4>Linkedin</h4></a>
 </div>
 <a href="#" class="in on"> <img class="btndos"  src="img/icons8-descargar-de-la-nube-30 (1).png" alt=""> <h4>Resumen</h4></a>
@@ -70,49 +96,49 @@
     <section class="pruno">
 <div class="contenedor separadordepr">
     <h4 class="pryuno">Giftify</h4>
-    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur est ea quasi ducimus, similique illum officiis corporis eveniet nobis tempora perferendis sapiente! Similique odit, expedita consequatur fugit nesciunt impedit dolores!</h5>
-<div class="xfavor">
+    <h5>Este fue un trabajo que me pidieron que haga en la Diplomatura, que tuve que hacer sobre una empresa de regaleria.</h5>
+<div class="xfavor chiqui">
     <div>
     <a class="linka separacion" href="https://ulisesfossati.github.io/Proyecto-1/" target="_blank"> <img class="pato" src="img/icons8-enlazar-16.png" alt=""> Website</a>
 </div>
 
 <div>
-    <a class="linka" href="https://github.com/ulisesfossati/Giftify-formulario" target="_blank"> <img class="pato" src="img/github.png" alt=""> Github</a>
+    <a class="linka" href="https://ulisesfossati.github.io/Giftify-formulario/" target="_blank"> <img class="pato" src="img/github.png" alt=""> Github</a>
 </div>
 </div>
 
 </div>
 <div class="contenedor separadordepr">
     <h4 class="pryuno">ivyre.</h4>
-    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur est ea quasi ducimus, similique illum officiis corporis eveniet nobis tempora perferendis sapiente! Similique odit, expedita consequatur fugit nesciunt impedit dolores!</h5>
-<div class="xfavor">
+    <h5>Este fue un trabajo que me pidieron que haga en la Diplomatura, que tuve que hacer sobre una empresa de moda.</h5>
+<div class="xfavor chiqui">
     <div>
-    <a class="linka separacion" href="https://ulisesfossati.github.io/Proyecto-1/" target="_blank"> <img class="pato" src="img/icons8-enlazar-16.png" alt=""> Website</a>
+    <a class="linka separacion" href="https://ulisesfossati.github.io/Ivyre./" target="_blank"> <img class="pato" src="img/icons8-enlazar-16.png" alt=""> Website</a>
 </div>
 
 <div>
-    <a class="linka" href="https://github.com/ulisesfossati/Giftify-formulario" target="_blank"> <img class="pato" src="img/github.png" alt=""> Github</a>
+    <a class="linka" href="https://github.com/ulisesfossati/Ivyre." target="_blank"> <img class="pato" src="img/github.png" alt=""> Github</a>
 </div>
 </div>
 
 </div>
-<div class="contenedor">
+<div class="contenedor monitor">
     <h4 class="pryuno">Lark Homes</h4>
-    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur est ea quasi ducimus, similique illum officiis corporis eveniet nobis tempora perferendis sapiente! Similique odit, expedita consequatur fugit nesciunt impedit dolores!</h5>
-<div class="xfavor">
+    <h5>Este fue un trabajo que me pidieron que haga en la Diplomatura, que tuve que hacer sobre una inmobiliaria.</h5>
+<div class="xfavor chiqui">
     <div>
-    <a class="linka separacion" href="https://ulisesfossati.github.io/Proyecto-1/" target="_blank"> <img class="pato" src="img/icons8-enlazar-16.png" alt=""> Website</a>
+    <a class="linka separacion" href="https://ulisesfossati.github.io/Lark-homes/" target="_blank"> <img class="pato" src="img/icons8-enlazar-16.png" alt=""> Website</a>
 </div>
 
 <div>
-    <a class="linka" href="https://github.com/ulisesfossati/Giftify-formulario" target="_blank"> <img class="pato" src="img/github.png" alt=""> Github</a>
+    <a class="linka" href="https://github.com/ulisesfossati/Lark-homes" target="_blank"> <img class="pato" src="img/github.png" alt=""> Github</a>
 </div>
 </div>
 
 </div>
 </section>
 <section class="prdos">
-    <div class="contenedor separadordepr">
+    <div class="contenedor separadordepr pipe">
         <h4 class="pryuno">Nuevo Proyecto</h4>
         <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur est ea quasi ducimus, similique illum officiis corporis eveniet nobis tempora perferendis sapiente! Similique odit, expedita consequatur fugit nesciunt impedit dolores!</h5>
     <div class="xfavor">
@@ -142,7 +168,7 @@
     
     </div>
 
-    <div class="contenedor">
+    <div class="contenedor monitor">
         <h4 class="pryuno">Nuevo Proyecto</h4>
         <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur est ea quasi ducimus, similique illum officiis corporis eveniet nobis tempora perferendis sapiente! Similique odit, expedita consequatur fugit nesciunt impedit dolores!</h5>
     <div class="xfavor">
@@ -159,13 +185,14 @@
 </section>
 </div>
 </section>
-<a  class="githuba" href="https://github.com/ulisesfossati?tab=repositories" target="_blank"> <h4>Repositorios en Github</h4>    </a>
+
+<a class="githuba" href="https://github.com/ulisesfossati?tab=repositories" target="_blank"> <h4>Repositorios en Github</h4></a>
 
 </section>
 <!-- ACA TERMINA SECTION TRES -->
 
 <!-- ACA EMPIEZA SECTION CUATRO -->
-<section class="servicio">
+<section  class="servicio">
 <h1>Servicio</h1>
 <div class="todos">
 <div class="pepe separador">
@@ -176,7 +203,7 @@
        <p>Desarrollo de sitios web profesionales, sistemas web, blogs y tiendas online.</p> 
 </div>
 
-<div class="pepe separador">
+<div class="pepe separador lino">
     <div class="imagen">
     <img src="img/phone.svg" alt="" class="prl">
 </div>
@@ -185,25 +212,22 @@
 </div>
 
 
-<div class="pepe separador">
+<div class="pepe separador lino">
     <div class="imagen">
     <img src="img/icons8-regla-64.png" alt="" class="prl">
 </div>
-      <h3>Creador de PaginasWeb</h3>
+      <h3>Diseñador de UI/UX</h3>
        <p>Diseñe layouts que se ajusten a su negocio de manera profesional y fien en desarrollo.</p> 
 </div>
 
 
-<div class="pepe">
+<div class="pepe lino">
     <div class="imagen">
     <img src="img/megaphone.svg" alt="" class="prl">
 </div>
-      <h3>Creador de PaginasWeb</h3>
+      <h3>Codigo Semántico</h3>
        <p>Desarrollo de sitios web profesionales, sistemas web, blogs y tiendas online</p> 
 </div>
-
-
-
 </div>
 
 </section>
@@ -213,36 +237,79 @@
 
 <!-- ACA EMPIEZA SECTION CINCO -->
 <section class="habilidades">
-<h1>Habilidades</h1>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum nostrum soluta illum iure, accusantium quod sint consequuntur obcaecati accusamus ratione pariatur facilis excepturi quasi modi unde! Sequi recusandae in commodi.</p>
+<div class="flexing">
+    <div>
+    <h1>Habilidades</h1>
+<p>Estas son algunas de las habilidades que fui aprendiendo y mejorando con el tiempo y la práctica, pero a la vez  informandome, investigando y tratando de actualizarme con contenidos que todavia no uso habitualmente.</p>
+</div>
 <div>
-<div><img src="img/icons8-html.svg" alt=""></div>
-<div><img src="img/icons8-css.svg" alt=""></div>
-<div><img src="img/icons8-js.svg" alt=""></div>
-<div><img src="img/icons8-python.svg" alt=""></div>
-<div><img src="img/icons8-reaccionar-nativo.svg" alt=""></div>
-<div><img src="img/icons8-inteligencia-artificial-50.png" alt=""></div>
-<div><img src="img/icons8-adobe-illustrator.svg" alt=""></div>
-<div><img src="img/icons8-node-js.svg" alt=""></div>
 
+    <div class="ia">
+<div class="cuno"> <p class="texto" >HTML</p> <img class="imagenuno"  src="img/icons8-html.svg" alt="" ></div>
+<div class="cdos"> <p class="texto">CSS</p> <img class="imagendos" src="img/icons8-css.svg" alt=""></div>
+<div class="ctres"> <p class="texto">JAVASCRIPT</p> <img class="imagentres" src="img/icons8-js.svg" alt=""></div>
+<div class="ccuatro"> <p class="texto">PYTHON</p> <img class="imagencuatro" src="img/icons8-python.svg" alt=""></div>
+    </div>
+    <div class="io">
+<div class="ccinco">  <img class="imagencinco"  src="img/icons8-reaccionar-nativo.svg" alt=""><p class="textodos">REACT</p></div>
+<div class="cseis">  <img class="imagenseis" src="img/icons8-inteligencia-artificial-50.png" alt=""><p class="textodos">IA</p></div>
+<div class="csiete">  <img class="imagensiete" src="img/icons8-adobe-illustrator.svg" alt=""><p class="textodos">ILUSTRATOR</p></div>
+<div class="cocho">  <img class="imagenocho" src="img/icons8-node-js.svg" alt=""><p class="textodos">NODE JS</p></div>
+</div>
+</div>
 </div>
 
 
 </section>
 
 <!-- ACA TERMINA SECTION CINCO -->
+
+<!-- ACA EMPIEZA SEXTO SECTION -->
+<section  class="formu">
+    <h1>Contacto</h1>
+    <div class="formulario">
+    <form action="">
+        <div class="emaill">
+            <div>
+            <p>Nombre</p>
+        <input class="casillauno"  type="text" placeholder="Nombre" required maxlength="17">
+    </div>
+    <div>
+        <p>Email</p>
+        <input class="casilla" type="email" placeholder="Email" required>
+    </div>
+    </div>
+    <div class="emailde">
+        <div>
+        <p>Apellido</p>
+    <input class="casillauno" type="text" placeholder="Apellido" required maxlength="17">
+</div>
+<div>
+    <p>Asunto</p>
+    <input class="casilla" type="text" placeholder="Asunto" required>
+</div>
+</div>
+       
+        <textarea class="mensaje" name="" id="" cols="30" rows="10" placeholder="Mensaje" required></textarea>
+        <div class="btnenviar">
+        <button class="enviar">Enviar</button>
+        </div>
+    </form>
+</div>
+</section>
 </main>
-
+<!-- ACA TERMINA SEXTO SECTION -->
 <footer>
-<a href="#" target="_blank"><img src="img/icons8-linkedin.svg" alt=""></a>
-<a href="https://github.com/ulisesfossati" target="_blank"><img src="img/icons8-github.svg" alt=""></a>
-<a href="https://www.instagram.com/ulisesfossati/" target="_blank"><img src="img/icons8-instagram (1).svg" alt=""></a>
-<form action="">
-    <input type="email" placeholder="Email" required>
-    <input type="text" placeholder="Mensaje" required>
-    <button>Enviar</button>
-</form>
-
+    <div class="todor">
+    <div class="redes">
+<a href="#" target="_blank"><img class="alturauno" src="img/icons8-linkedin.svg" alt=""></a>
+<a href="https://github.com/ulisesfossati" target="_blank"><img class="alturados" src="img/icons8-github.svg" alt=""></a>
+<a href="https://www.instagram.com/ulisesfossati/" target="_blank"><img class="alturatres" src="img/icons8-instagram (1).svg" alt=""></a>
+</div>
+<div class="aver">
+<img  src="img/icons8-arriba-en-cuadrado-50 (2).png" alt="">
+</div>
+</div>
 
 
 
